Running barcodeAPIS
